<resources>
    <string name="app_name">firebase_teste</string>
    <string name="button">Button</string>
    <string name="nome">Nome</string>
    <string name="idade">idade</string>
    <string name="altura">altura</string>
    <string name="numero">numero</string>
    <string name="salvar">salvar</string>
    <string name="proxima_pag">proxima pag</string>
    <string name="title_activity_ecra2">ecra2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="radia_o">radiação</string>
    <string name="guardar">guardar</string>
</resources>